исправление показателя кол-ва товара в корзине. вместо ссылки на картинку, сделана фигура в css

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </ul>
           </nav>
           <div class="cart">
-            <span class="cart_count">5</span>
+            <div class="cart_cart"></div>
+            <div class="cart_count">5</div>
           </div>
         </header>
         <div class="main">
