--- a/index.html
+++ b/index.html
@@ -66,5 +66,148 @@
         <p class="info_subtitle">Сделайте заказ и получите подарок!</p>
       </div>
     </div>
+    <!--page-dark-->
+    <div class="page-light">
+      <div class="container">
+        <div class="collection">
+          <div class="collection_item collection_man">
+            <h2 class="collection_title">мужская коллекция</h2>
+            <p class="collection_text">Обувь, полуверы, костюмы</p>
+            <a class="btn btn-xs" href=""
+              ><img src="./images/Arrow.svg" alt="Arrow"
+            /></a>
+          </div>
+          <div class="collection_item collection_woman">
+            <h2 class="collection_title">женская коллекция</h2>
+            <p class="collection_text">Обувь, полуверы, костюмы</p>
+            <a class="btn btn-xs" href=""
+              ><img src="./images/Arrow.svg" alt="Arrow"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--page-light-->
+    <div class="page">
+      <div class="container">
+        <h2 class="title_h2">Новые модели</h2>
+        <div class="product">
+          <div class="product_item">
+            <img src="./images/product.png" alt="product" />
+            <p class="product_title">
+              Коктейльное <br />
+              платье
+            </p>
+            <p class="product_price">₽ 40 000</p>
+          </div>
+          <div class="product_item">
+            <img src="./images/product1.png" alt="product" />
+            <p class="product_title">Футболка <br />черная</p>
+            <p class="product_price">₽ 10 000</p>
+          </div>
+          <div class="product_item">
+            <img src="./images/product.png" alt="product" />
+            <p class="product_title">Коктейльное <br />платье</p>
+            <p class="product_price">₽ 40 000</p>
+          </div>
+          <div class="product_item">
+            <img src="./images/product1.png" alt="product" />
+            <p class="product_title">Футболка <br />черная</p>
+            <p class="product_price">₽ 10 000</p>
+          </div>
+        </div>
+        <a href="" class="btn btn-center"
+          ><span>Все модели</span><img src="./images/Arrow.svg" alt="Arrow"
+        /></a>
+      </div>
+    </div>
+    <!--page-->
+    <div class="page-dark">
+      <div class="container">
+        <footer class="footer">
+          <div class="footer_logo">
+            <img src="./images/logo-derk.svg" alt="Logo" />
+          </div>
+          <div class="footer_nav">
+            <ul class="footer_list">
+              <li class="footer_list-item footer_list-title">
+                Основные ссылки
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">О компании</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Каталог</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Доставка</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Оплата</a>
+              </li>
+            </ul>
+            <ul class="footer_list">
+              <li class="footer_list-item footer_list-title">Категории</li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Мужская одежда</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Женская одежда</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Детская одежда</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Для животных</a>
+              </li>
+            </ul>
+            <ul class="footer_list">
+              <li class="footer_list-item footer_list-title">
+                Полезные ссылки
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Таблица размеров</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Блог о моде</a>
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link">Наша миссия</a>
+              </li>
+            </ul>
+            <ul class="footer_list">
+              <li class="footer_list-item footer_list-title">Соц сети</li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link"
+                  ><img
+                    class="footer_list-img"
+                    src="./images/icons/vk.svg"
+                    alt="VK.com"
+                  />VK.com</a
+                >
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link"
+                  ><img
+                    class="footer_list-img"
+                    src="./images/icons/fb.svg"
+                    alt="Facebook"
+                  />Facebook</a
+                >
+              </li>
+              <li class="footer_list-item">
+                <a href="" class="footer_list-link"
+                  ><img
+                    class="footer_list-img"
+                    src="./images/icons/inst.svg"
+                    alt="Instagram"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
