--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
               <li class="nav_item"><a class="nav_link" href="">Доставка</a></li>
             </ul>
           </nav>
-          <div class="cart">
+          <button class="cart">
             <div class="cart_cart"></div>
             <div class="cart_count">5</div>
-          </div>
+          </button>
         </header>
         <div class="main">
           <div class="main_item sale">
@@ -87,7 +87,7 @@
         </div>
       </div>
     </div>
-    <!--page-light-->
+    <!--collection-->
     <div class="page">
       <div class="container">
         <h2 class="title_h2">Новые модели</h2>
@@ -121,7 +121,7 @@
         /></a>
       </div>
     </div>
-    <!--page-->
+    <!--product-->
     <div class="page-dark">
       <div class="container">
         <footer class="footer">
@@ -209,5 +209,15 @@
         </footer>
       </div>
     </div>
+    <!--footer-->
+    <div class="page">
+      <div class="container">
+        <div class="sub_footer">
+          <p class="sub_footer-text">Copyright © 2019. Все права защищены</p>
+          <p class="sub_footer-text">Политика приватности</p>
+        </div>
+      </div>
+    </div>
+    <!--sub_footer-->
   </body>
 </html>
